# express2cpp

./: .clang-format  .clang-tidy.in  .gitignore  .pkg  CMakeLists.txt  LICENSE  README.md
.github/workflows/: unix.yml  windows.yml
cmake/: buildcache.cmake  clang-tidy.cmake
exe/: express_gen.cc
express/include/express/: parse_exp.h
express/src/: exp_struct_gen.cc  parse_exp.cc
express/test/: exp_test.cc  ifc23.txt
include/express/: exp_struct_gen.h  get_subtypes_of.h
include/step/: assign_entity_ptr_to_select.h  assign_variant_entity.h  entity_map.h  entry_parser.h  get_next_id.h  get_next_token.h  has_data.h  id_t.h  is_collection.h  model.h  parse_step.h  resolve.h  root_entity.h  selective_entity_parser.h
src/: exp_struct_gen.cc  get_next_id.cc  get_subtypes_of.cc  id_t.cc  parse_exp.cc
step/include/step/: exp_logical.h  has_data.h  is_collection.h  logical.h  model.h  parse_lines.h  parse_step.h  resolve.h  root_entity.h  selective_entity_parser.h  split_line.h  write.h
step/src/: exp_logical.cc  logical.cc  root_entity.cc  split_line.cc  write.cc
step/test/: entry_parser_test.cc  parse_basic_datatypes_test.cc  parse_ifc_test.cc  writer_test.cc
test/: entry_parser_test.cc  exp_test.cc  parse_step_test.cc  test_dir.h.in
